src/test/ui/generic-associated-types/issue-87258_a.stderr
error: unconstrained opaque type
  --> $DIR/issue-87258_a.rs:17:26
   |
LL |     type FooFuture<'a> = impl Trait1;
   |                          ^^^^^^^^^^^
   |
   = note: `FooFuture` must be used in combination with a concrete type within the same module

error: aborting due to previous error

